--- a/static/css/master.css
+++ b/static/css/master.css
@@ -54,10 +54,11 @@
  padding-top: 13% !important;
  padding-bottom: 15% !important;
  white-space: nowrap;
+ background-color: rgba(0, 0, 0, 0.5);
 
 }
 
-.border{
+.icons-border{
   border: 1px solid #aeb5c1;
   text-align: center;
 }
@@ -117,6 +118,7 @@
 iframe{
   height: 255px !important;
   max-width: 255px !important;
+  overflow-y: hidden !important;
 }
 
 .noflow-y{
@@ -124,9 +126,73 @@ iframe{
 }
 
 .custom-modal{
-  width: 80% !important;
+  width: 95% !important;
 }
 
 .margin-left{
-  margin-left: 50px !important;
+  margin-left: 9% !important;
+}
+/* label focus color */
+  .input-field input[type=text]:focus + label {
+    color: #2196f3 !important;
+}
+/* label underline focus color */
+   .input-field input[type=text]:focus {
+     border-bottom: 1px solid #2196f3 !important;
+     box-shadow: 0 1px 0 0 #2196f3!important;
+   }
+ /* label focus color */
+   .input-field input[type=password]:focus + label {
+     color: #2196f3 !important;
+ }
+ /* label underline focus color */
+    .input-field input[type=password]:focus {
+      border-bottom: 1px solid #2196f3 !important;
+      box-shadow: 0 1px 0 0 #2196f3!important;
+    }
+/* label focus color */
+  .input-field input[type=email]:focus + label {
+    color: #2196f3 !important;
+}
+/* label underline focus color */
+   .input-field input[type=email]:focus {
+     border-bottom: 1px solid #2196f3 !important;
+     box-shadow: 0 1px 0 0 #2196f3!important;
+   }
+
+.marg-top-s{
+  margin-top: 25px;
+}
+
+.marg-top-m{
+  margin-top: 75px;
+}
+
+.marg-top-l{
+  margin-top: 125px;
+}
+
+.marg-bottom-s{
+  margin-bottom: 25px;
+}
+
+.marg-bottom-m{
+  margin-bottom: 75px;
+}
+
+.marg-bottom-l{
+  margin-bottom: 125px;
+}
+
+.centerbtn{
+  width: 100%;
+}
+
+.bkgnd{
+  background-image: url("/images/bkgnd.png");
+  background-size: contain;
+}
+
+.nav-color{
+  background-color: #2196f3 !important;
 }
