--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,12 @@
         <!-- master css -->
         <link rel="stylesheet" href="/css/master.css">
 
+        <!-- login css -->
+        <link rel="stylesheet" href="/css/login.css">
+
+        <!-- couch css -->
+        <link rel="stylesheet" href="/css/customMaterialize.css">
+
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
@@ -38,15 +44,23 @@
   </head>
   <body>
 
-    <div class="row">
-      <div class="col s12 m6 l4 offset-m3 offset-l4 card ">
-        <h4 class="center blue-text">Admin Login</h4>
-        <form class="" action="index.html" method="post">
-          <input type="email" name="email" placeholder="Email">
-          <input type="password" name="password" placeholder="Password">
-          <input type="submit" name="submit" value="Login" class="btn light-blue darken-4 ">
-        </form>
+    <div class="row marg-top-l">
+        <h4 class="center blue-text quicksand">Admin Login</h4>
+      <div class="col s10 m8 l4 offset-s1 offset-m2 offset-l4 card">
+        <form class="scale-pad-top marg-bottom-s" action="index.html" method="post">
+          <div class="input-field col s12">
+            <input type="email" name="email">
+            <label for="email">Email</label>
+          </div>
+          <div class="input-field col s12 marg-bottom-s">
+            <input type="password" name="password" >
+            <label for="password">Password</label>
+          </div>
       </div>
+      <div class="col s10 m8 l4 offset-s1 offset-m2 offset-l4 no-pad">
+        <input type="submit" name="submit" value="Login" class="btn light-blue darken-4 btn-full">
+      </div>
+    </form>
     </div>
 
   </body>
