--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,9 +2,108 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- latest minified jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+
+    <!-- master css -->
+    <link rel="stylesheet" href="/css/master.css">
+
+    <!--profile css -->
+    <link rel="stylesheet" href="/css/profile.css">
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+    <!-- materialize icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- materialize fixes -->
+    <link rel="stylesheet" href="/css/materializefixes.css">
+
+    <!--google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Quicksand|Source+Serif+Pro" rel="stylesheet">
+
+
+    <script type="text/javascript" src='/main.js'>
+
+    </script>
+
+    <title>Scott, Skelly & Muchmore</title>
   </head>
   <body>
+
+    <!-- heading -->
+    <nav class="hide-on-med-and-down">
+      <div class="nav-wrapper gradient">
+      <ul id="nav-mobile" class=" hide-on-med-and-down quicksand ">
+        <li class="spacing center-align"><a href="#partners">Partners</a></li>
+        <li class="spacing center-align"><a class="modal-trigger" href="#modal1">Contact Us</a></li>
+        <li class="spacing center-align"><a class="modal-trigger" href="#modal2">Online Scheduling</a></li>
+        <li class="spacing center-align"><a href="#location">Location</a></li>
+        <li class="spacing center-align"><a href="#fee">Fee</a></li>
+      </ul>
+      </div>
+    </nav>
+
+    <!-- content -->
+    <div class="row marg-top-m ">
+
+      <!-- picture and contact info -->
+      <div class="col s12 m4 ">
+        <div class="col s10 offset-s2">
+          <div class="col s8 offset-s1 card">
+            <img src="<%= partner.img %> " class="profile-pic responsive-img" alt="">
+          </div>
+          <div class="col s10 offset-s1">
+            <h5 class="serif"><%= partner.title %> <%= partner.first_name %> <%= partner.middle_initial %>. <%= partner.last_name %></h5>
+          </div>
+        </div>
+      </div>
+
+      <!-- bio -->
+      <div class="col s12 m8 ">
+        <%for(let i = 0; i < bio.length; i++){%>
+          <div class="col s12">
+            <p><%= bio[i].paragraph %></p>
+          </div>
+        <%}%>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col s2 offset-s5 center-align">
+        <img src="/images/NADNCrest.gif" alt="">
+      </div>
+    </div>
+
+    <!-- footer -->
+    <footer class="page-footer light-blue darken-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text sans"> Scott, Skelly & Muchmore L.L.C.</h5>
+            <p class="grey-text text-lighten-4">1313 E. Osborn Road #120</p>
+            <p class="grey-text text-lighten-4">Phoenix, Arizona 85014</p>
+            <p class="grey-text text-lighten-4 quicksand">(602) 277-8228</p>
+          </div>
+
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        Copyright © 2015 by Scott. Skelly & Muchmore LLC.
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
