--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,7 @@
     <div class="row marg-top-l">
         <h4 class="center blue-text quicksand">Admin Login</h4>
       <div class="col s10 m8 l4 offset-s1 offset-m2 offset-l4 card">
-        <form class="scale-pad-top marg-bottom-s" action="index.html" method="post">
+        <form class="scale-pad-top marg-bottom-s" action="/auth" method="post">
           <div class="input-field col s12">
             <input type="email" name="email">
             <label for="email">Email</label>
