--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -38,8 +38,8 @@
   <body>
     <ul id='nav-moble' class="side-nav fixed scale-pad-bottom">
       <div class="row">
-        <div class="col s12 white">
-          <h5 class="black-text ">Admin Portal</h5>
+        <div class="col s12 blue darken-4">
+          <h5 class="white-text ">Admin Portal</h5>
         </div>
         <li class='side-nav-item'>partner 1</li>
         <li class='side-nav-item'>partner 2</li>
