--- a/views/index.ejs
+++ b/views/index.ejs
@@ -198,6 +198,84 @@
       </div>
     </div>
 
+    <div class="row bottom-row">
+      <div class="col s12">
+
+      <h4 class="center-align quicksand ">Issues Mediated</h4>
+      <div class="row">
+        <div class="col s4  ">
+          <p class="center-align">ADA Disability</p>
+          <p class="center-align">Agricultural</p>
+          <p class="center-align">Anti-Trust</p>
+          <p class="center-align">Appellate</p>
+          <p class="center-align">Automotive</p>
+          <p class="center-align">Aviation</p>
+          <p class="center-align">Banking & Finance</p>
+          <p class="center-align">Civil Rights</p>
+          <p class="center-align">Class Actions</p>
+          <p class="center-align">Commercial/Business</p>
+          <p class="center-align">Community Associations</p>
+          <p class="center-align">Construction</p>
+          <p class="center-align">Consumer Fraud</p>
+          <p class="center-align">Contract Disputes</p>
+          <p class="center-align">EEOC</p>
+          <p class="center-align">Eminent Domain</p>
+          <p class="center-align">Employment</p>
+          <p class="center-align">Engineering</p>
+          <p class="center-align">Environmental</p>
+          <p class="center-align">Family Businesses</p>
+          <p class="center-align">Franchise</p>
+        </div>
+        <div class="col s4 ">
+          <p class="center-align">Health Care</p>
+          <p class="center-align">Industrial</p>
+          <p class="center-align">Insurance</p>
+          <p class="center-align">Intellectual Property</p>
+          <p class="center-align">International</p>
+          <p class="center-align">Landlord/Tenant	</p>
+          <p class="center-align">Legal Malpractice</p>
+          <p class="center-align">Lemon Law</p>
+          <p class="center-align">Libel & Slander</p>
+          <p class="center-align">Local Government	</p>
+          <p class="center-align">Media & Communications</p>
+          <p class="center-align">Medical Malpractice	</p>
+          <p class="center-align">Mergers & Acquisitions</p>
+          <p class="center-align">Native American</p>
+          <p class="center-align">Natural Disasters</p>
+          <p class="center-align">Non-profit Organizations</p>
+          <p class="center-align">Nursing Homes</p>
+          <p class="center-align">Partnerships</p>
+          <p class="center-align">Personal Injury</p>
+          <p class="center-align">Pharmaceuticals</p>
+          <p class="center-align">Police</p>
+        </div>
+        <div class="col s4 ">
+          <p class="center-align">Premises Liability</p>
+          <p class="center-align">Probate</p>
+          <p class="center-align">Product Liability</p>
+          <p class="center-align">Professional Fees</p>
+          <p class="center-align">Professional Liability</p>
+          <p class="center-align">Professional Malpractice</p>
+          <p class="center-align">Professional Negligence</p>
+          <p class="center-align">Real Estate</p>
+          <p class="center-align">Religious Institutions</p>
+          <p class="center-align">Securities</p>
+          <p class="center-align">Shareholder Disputes</p>
+          <p class="center-align">Software</p>
+          <p class="center-align">Sports</p>
+          <p class="center-align">Technology</p>
+          <p class="center-align">Title Disputes</p>
+          <p class="center-align">Torts</p>
+          <p class="center-align">Transportation</p>
+          <p class="center-align">Trusts / Estates</p>
+          <p class="center-align">Utilities</p>
+          <p class="center-align">Workers' Compensation</p>
+          <p class="center-align">Wrongful Death</p>
+        </div>
+      </div>
+      </div>
+    </div>
+
   <!-- Modals -->
 
   <!-- contact -->
