--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
 
     </script>
 
-    <title>Scott, Skelly & Muchmore</title>
+    <title>Skelly, Muchmore, & Oberbillig</title>
   </head>
   <body>
 
@@ -69,7 +69,7 @@
 
     <div class="row top-span">
       <div class="col l12 m12 s12  logo-box">
-          <span class="logo logo-top ">Scott, Skelly & Muchmore L.L.C.</span><br>
+          <span class="logo logo-top ">Skelly, Muchmore & Oberbillig L.L.C.</span><br>
           <span class="logo logo-bottom ">Mediation and Arbitration Services</span>
       </div>
     </div>
@@ -293,7 +293,7 @@
                     <% for(let i =0; i < partners.length; i++){%>
                         <option class="blue-text" value="<%= partners[i].email %>"><%= partners[i].first_name %> <%= partners[i].middle_initial %>. <%=partners[i].last_name %></option>
                     <%}%>
-                  <option class="blue-text" value="dlegge@ssmadr.com">Debra Legge</option>
+                  <option class="blue-text" value="dlegge@ssmadr.com">Scheduling</option>
                 </select>
               </div>
               <div class="input-field col s6">
@@ -301,9 +301,6 @@
               </div>
             </div>
             </div>
-
-
-
 
           <div class="row">
             <div class="input-field col s12">
@@ -333,14 +330,6 @@
 
         <div class="row">
 
-          <div class="col s12 l4 center-align">
-            <p class="center-align">Steve Scott</p>
-            <iframe src="http://www.nadn.org/mycalendar-small.php?id=577414834&bg=FFFFFF&text=000000"></iframe>
-            <div class="col s12">
-              <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
-            </div>
-          </div>
-
           <div class="col s12  l4 center-align ">
             <p class="center-align" >Chris Skelly</p>
             <iframe src="http://www.nadn.org/mycalendar-small.php?id=121869450&bg=FFFFFF&text=000000"></iframe>
@@ -357,6 +346,14 @@
             </div>
           </div>
 
+          <div class="col s12 l4 center-align">
+            <p class="center-align">Robert Oberbillig</p>
+            <iframe src="http://www.nadn.org/mycalendar-small.php?id=605446516&bg=FFFFFF&text=000000"></iframe>
+            <div class="col s12">
+              <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -368,7 +365,7 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text sans"> Scott, Skelly & Muchmore L.L.C.</h5>
+            <h5 class="white-text sans">Skelly, Muchmore & Oberbillig L.L.C.</h5>
             <p class="grey-text text-lighten-4">1313 E. Osborn Road #120</p>
             <p class="grey-text text-lighten-4">Phoenix, Arizona 85014</p>
             <p class="grey-text text-lighten-4 quicksand">(602) 277-8228</p>
