--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,7 +36,7 @@
 
     </script>
 
-    <title>Scott, Skelly & Muchmore</title>
+    <title>Skelly, Muchmore & Oberbillig</title>
   </head>
   <body>
 
@@ -180,7 +180,7 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text sans"> Scott, Skelly & Muchmore L.L.C.</h5>
+            <h5 class="white-text sans"> Skelly, Muchmore & Oberbillig L.L.C.</h5>
             <p class="grey-text text-lighten-4">1313 E. Osborn Road #120</p>
             <p class="grey-text text-lighten-4">Phoenix, Arizona 85014</p>
             <p class="grey-text text-lighten-4 quicksand">(602) 277-8228</p>
