--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -190,8 +190,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-        Copyright © 2015 by Scott. Skelly & Muchmore LLC.
-        </div>
+          Copyright © 2015 by Skelly, Muchmore & Oberbillig LLC.
       </div>
     </footer>
 
