--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,7 +123,7 @@
       <div class="col m4 l4 hide-on-small-only ">
         <div class="row">
           <div class="col s12">
-            <img src="<%= partners[2].img %>" alt="" class="img img-size">
+            <img src=" <%= partners[2].img %>" alt="" class="img secondary-img-size">
           </div>
         </div>
         <div class="row">
@@ -375,7 +375,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-        Copyright © 2015 by Scott. Skelly & Muchmore LLC.
+        Copyright © 2015 by Skelly, Muchmore & Oberbillig LLC.
         </div>
       </div>
     </footer>
