--- a/views/404.ejs
+++ b/views/404.ejs
@@ -50,7 +50,7 @@
         </div>
       </nav>
 
-      <div class="row ">
+      <div class="row marg-top-xl">
         <div class="col s12 ">
           <h1 class="center-align">404</h1>
           <h3 class="center-align">page not found</h3>
