small requested changed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,8 @@
     </script>
 
     <title>Skelly, Muchmore, & Oberbillig</title>
+    <meta name="description" content="Skelly, Muchmore & Oberbillig Mediation Services, LLP is a partnership between Judge Christopher Skelly, Charles J. Muchmore, and Judge Robert H. Oberbillig. The firm offers mediation and arbitration services throughout Arizona." />
+
   </head>
   <body>
 
@@ -77,7 +79,7 @@
     <!-- partners -->
     <div class="row" id="partners">
       <div class="col l6 m6 s8 offset-l3 offset-m3 offset-s2 center-align">
-        <h4 class="able">Partners</h4>
+        <h4 class="able">Members</h4>
       </div>
     </div>
     <div class="row">
