--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
     <!--google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Quicksand|Source+Serif+Pro" rel="stylesheet">
 
+    <link rel="icon" href="/images/fav.ico" type="image/gif" sizes="16x16">
 
     <script type="text/javascript" src='/main.js'>
 
