changed partners to members

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,10 +48,11 @@
       <nav class="hide-on-small-only">
         <div class="nav-wrapper blue hide-on-small-only">
         <ul id="nav-mobile" class=" hide-on-small-only quicksand ">
-          <li class="spacing center-align"><a href="#partners">Partners</a></li>
+          <li class="spacing center-align"><a href="#members">Members</a></li>
           <li class="spacing center-align"><a class="modal-trigger" href="#email">Contact Us</a></li>
           <li class="spacing center-align"><a class="modal-trigger nowrap" href="#scheduling">Scheduling</a></li>
           <li class="spacing center-align"><a href="#location">Location</a></li>
+          <li class="spacing center-align"><a href="#cases">Case Experience</a></li>
           <li class="spacing center-align"><a href="#fee">Fee</a></li>
         </ul>
         </div>
@@ -60,7 +61,7 @@
       <nav class="blue hide-on-med-and-up">
         <div class="nav-wrapper ">
           <ul id="slide-out" class="side-nav left hide-on-med-and-up">
-            <li><a href="#partners"><span class=" name">Partners</a></li>
+            <li><a href="#members"><span class=" name">Members</a></li>
             <li><a href="#email" class="modal-trigger">Contact Us</a></li>
             <li><a href="#scheduling" class="modal-trigger"><span class=" email">Online Scheduling</a></li>
             <li><a href="#location">location</a></li>
@@ -78,7 +79,7 @@
     </div>
 
     <!-- partners -->
-    <div class="row" id="partners">
+    <div class="row" id="members">
       <div class="col l6 m6 s8 offset-l3 offset-m3 offset-s2 center-align">
         <h4 class="able">Members</h4>
       </div>
@@ -186,7 +187,7 @@
     </div>
 
     <!-- fee -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col s12 m10 l10 offset-m1 offset-l1">
         <h4 class="center-align quicksand" id="fee">Fee</h4>
         <p class="center-align">  We would appreciate mediation memoranda which generally follow the format specified in Rule 16.1(c), Arizona Rules of Civil Procedure, at least one week prior to the mediation. If you have briefed dispositive motions, you could send copies of those and then just brief supplemental memoranda covering the topics listed in subparagraphs 3, 4 and 5 of the rule. Absent agreement to the contrary, any memoranda that are submitted to us should be exchanged between counsel, and anyone participating in the mediation should read the memoranda prior to the conference. If you wish to submit a separate confidential memorandum, please feel free to do so.</p>
@@ -199,12 +200,12 @@
         <p class="center-align"><b>Cancellation Policy: </b><br>  In the event a matter is cancelled or rescheduled within 15 days before the scheduled date, a cancellation fee of $1,500.00 will be assessed for a half-day ($3,000.00 for a full-day) case unless other cases can be scheduled in those time slots. We will make every effort to reschedule. Any cancellation fee will be allocated equally between the parties, unless we are advised that the parties have a different agreement. We appreciate your understanding and cooperation concerning the necessity of a cancellation fee. </p>
 
       </div>
-    </div>
+    </div> -->
 
-    <div class="row bottom-row">
+    <div class="row ">
       <div class="col s12">
 
-      <h4 class="center-align quicksand ">Issues Mediated</h4>
+      <h4 class="center-align quicksand" id="cases">Case Experience</h4>
       <div class="row">
         <div class="col s4  ">
           <p class="center-align">ADA Disability</p>
@@ -356,6 +357,25 @@
               <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
             </div>
           </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- fee -->
+  <div id="fee" class="modal custom-modal">
+    <div class="modal-content">
+      <div class="row ">
+
+        <div class="col s12">
+          <h4 class="center-align">Online scheduling</h4>
+        </div>
+
+        <div class="row">
+
+          fee placeholder
 
         </div>
       </div>
