--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,6 @@
           <li class="spacing center-align"><a class="modal-trigger" href="#email">Contact Us</a></li>
           <li class="spacing center-align"><a class="modal-trigger nowrap" href="#scheduling">Scheduling</a></li>
           <li class="spacing center-align"><a href="#location">Location</a></li>
-          <li class="spacing center-align"><a href="#cases">Case Experience</a></li>
           <li class="spacing center-align"><a href="#fee">Fee</a></li>
         </ul>
         </div>
@@ -143,21 +142,22 @@
 
       <!-- partner 1 small only -->
       <div class="col s12">
-        <a href="/partner/<%= partners[0].id %>" class="btn blue darken-2 hide-on-med-and-up" style="width: 100%; margin-top:10px; margin-bottom: 10px;">Hon. Stephen H. Scott</a>
+        <a href="/partner/<%= partners[0].id %>" class="btn blue darken-2 hide-on-med-and-up" style="width: 100%; margin-top:10px; margin-bottom: 10px;"><%= partners[0].title %> <%= partners[0].first_name %> <%= partners[0].middle_initial %>. <%=partners[0].last_name %></a>
       </div>
       <!-- partner 2 small only -->
       <div class="col s12">
-        <a href="/partner/<%= partners[1].id %>" class="btn blue darken-2 hide-on-med-and-up" style="width: 100%; margin-top:10px; margin-bottom: 10px;">Hon. Christopher M. Skelly</a>
+        <a href="/partner/<%= partners[1].id %>" class="btn blue darken-2 hide-on-med-and-up" style="width: 100%; margin-top:10px; margin-bottom: 10px;"><%= partners[1].title %> <%= partners[1].first_name %> <%= partners[1].middle_initial %>. <%=partners[1].last_name %></a>
       </div>
 
       <!-- partner 3 small only -->
       <div class="col s12">
-        <a href="/partner/<%= partners[2].id %>" class="btn blue darken-2 hide-on-med-and-up" style="width: 100%;margin-top:10px; margin-bottom: 10px;">Charles J. Muchmore</a>
+        <a href="/partner/<%= partners[2].id %>" class="btn blue darken-2 hide-on-med-and-up" style="width: 100%;margin-top:10px; margin-bottom: 10px;"><%= partners[2].title %> <%= partners[2].first_name %> <%= partners[2].middle_initial %>. <%=partners[2].last_name %></a>
       </div>
 
     </div>
 
   <!--buttons -->
+
     <!-- contact us -->
     <div class="row bottom-row">
       <div class="col s12 m6 l6 icons-border ">
