--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
           <li class="spacing center-align"><a class="modal-trigger" href="#email">Contact Us</a></li>
           <li class="spacing center-align"><a class="modal-trigger nowrap" href="#scheduling">Scheduling</a></li>
           <li class="spacing center-align"><a href="#location">Location</a></li>
-          <li class="spacing center-align"><a href="#fee">Fees</a></li>
+          <li class="spacing center-align modal-trigger"><a href="#fee">Fees</a></li>
         </ul>
         </div>
       </nav>
