updated fee modal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
           <li class="spacing center-align"><a class="modal-trigger" href="#email">Contact Us</a></li>
           <li class="spacing center-align"><a class="modal-trigger nowrap" href="#scheduling">Scheduling</a></li>
           <li class="spacing center-align"><a href="#location">Location</a></li>
-          <li class="spacing center-align modal-trigger"><a href="#fee">Fees</a></li>
+          <li class="spacing center-align"><a href="#fee" class="modal-trigger">Fees</a></li>
         </ul>
         </div>
       </nav>
@@ -64,7 +64,7 @@
             <li><a href="#email" class="modal-trigger">Contact Us</a></li>
             <li><a href="#scheduling" class="modal-trigger"><span class=" email">Online Scheduling</a></li>
             <li><a href="#location">location</a></li>
-            <li><a href="#fee" class="modal-trigger">Fee</a></li>
+            <li><a href="#fee" class="modal-trigger">Fees</a></li>
           </ul>
           <a href="#" data-activates="slide-out" class="button-collapse left "><i class="material-icons hide-on-med-and-up">menu</i></a>
         </div>
