--- a/views/index.ejs
+++ b/views/index.ejs
@@ -186,22 +186,6 @@
       </div>
     </div>
 
-    <!-- fee -->
-    <!-- <div class="row">
-      <div class="col s12 m10 l10 offset-m1 offset-l1">
-        <h4 class="center-align quicksand" id="fee">Fee</h4>
-        <p class="center-align">  We would appreciate mediation memoranda which generally follow the format specified in Rule 16.1(c), Arizona Rules of Civil Procedure, at least one week prior to the mediation. If you have briefed dispositive motions, you could send copies of those and then just brief supplemental memoranda covering the topics listed in subparagraphs 3, 4 and 5 of the rule. Absent agreement to the contrary, any memoranda that are submitted to us should be exchanged between counsel, and anyone participating in the mediation should read the memoranda prior to the conference. If you wish to submit a separate confidential memorandum, please feel free to do so.</p>
-
-
-        <p class="center-align"><b>Hourly Mediation/Arbitration/Special Master Rate: $500.00</b><br>
-        Unless the parties direct otherwise, we will send a statement representing one-half of the total to counsel for each of the parties at the conclusion of the hearing. Unfortunately, there have been occasions in the past when the parties have refused to pay the fee once the matter was resolved. We considered requiring payment in advance, but decided to simply ask the attorneys to be jointly responsible with their clients for our fee. Participation in the mediation will constitute your acceptance of that responsibility. </p>
-
-
-        <p class="center-align"><b>Cancellation Policy: </b><br>  In the event a matter is cancelled or rescheduled within 15 days before the scheduled date, a cancellation fee of $1,500.00 will be assessed for a half-day ($3,000.00 for a full-day) case unless other cases can be scheduled in those time slots. We will make every effort to reschedule. Any cancellation fee will be allocated equally between the parties, unless we are advised that the parties have a different agreement. We appreciate your understanding and cooperation concerning the necessity of a cancellation fee. </p>
-
-      </div>
-    </div> -->
-
     <div class="row ">
       <div class="col s12">
 
@@ -370,12 +354,23 @@
       <div class="row ">
 
         <div class="col s12">
-          <h4 class="center-align">Online scheduling</h4>
+          <h4 class="center-align">Fees</h4>
         </div>
 
         <div class="row">
 
-          fee placeholder
+          <!-- fee -->
+          <div class="row">
+            <div class="col s12 m10 l10 offset-m1 offset-l1">
+
+              <p class="center-align"><b>Hourly Mediation/Arbitration/Special Master Rate: $500.00</b><br>
+              Unless the parties direct otherwise, we will send a statement representing one-half of the total to counsel for each of the parties at the conclusion of the hearing. Unfortunately, there have been occasions in the past when the parties have refused to pay the fee once the matter was resolved. We considered requiring payment in advance, but decided to simply ask the attorneys to be jointly responsible with their clients for our fee. Participation in the mediation will constitute your acceptance of that responsibility. </p>
+
+
+              <p class="center-align"><b>Cancellation Policy: </b><br>  In the event a matter is cancelled or rescheduled within 15 days before the scheduled date, a cancellation fee of $1,500.00 will be assessed for a half-day ($3,000.00 for a full-day) case unless other cases can be scheduled in those time slots. We will make every effort to reschedule. Any cancellation fee will be allocated equally between the parties, unless we are advised that the parties have a different agreement. We appreciate your understanding and cooperation concerning the necessity of a cancellation fee. </p>
+
+            </div>
+          </div>
 
         </div>
       </div>
