--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -31,6 +31,9 @@
     <!--google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Quicksand|Source+Serif+Pro" rel="stylesheet">
 
+    <!-- favicon -->
+    <link rel="icon" href="/images/fav.ico" type="image/gif" sizes="16x16">
+
 
     <script type="text/javascript" src='/main.js'>
 
