--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,11 +48,11 @@
     <nav class="hide-on-small-only">
       <div class="nav-wrapper blue hide-on-small-only">
       <ul id="nav-mobile" class=" hide-on-small-only quicksand ">
-        <li class="spacing center-align"><a href="/#partner">Partners</a></li>
+        <li class="spacing center-align"><a href="/#members">Members</a></li>
         <li class="spacing center-align"><a class="modal-trigger" href="#email">Contact Us</a></li>
         <li class="spacing center-align"><a class="modal-trigger nowrap" href="#scheduling">Scheduling</a></li>
         <li class="spacing center-align"><a href="/#location">Location</a></li>
-        <li class="spacing center-align"><a href="/#fee">Fee</a></li>
+        <li class="spacing center-align"><a href="#fee" class="modal-trigger">Fees</a></li>
       </ul>
       </div>
     </nav>
@@ -64,7 +64,7 @@
           <li><a href="#email" class="modal-trigger">Contact Us</a></li>
           <li><a href="#scheduling" class="modal-trigger"><span class=" email">Online Scheduling</a></li>
           <li><a href="/#location">location</a></li>
-          <li><a href="/#fee">Fee</a></li>
+          <li class="spacing center-align"><a href="#fee" class="modal-trigger">Fees</a></li>
         </ul>
         <a href="#" data-activates="slide-out" class="button-collapse left "><i class="material-icons hide-on-med-and-up">menu</i></a>
       </div>
@@ -170,6 +170,35 @@
               <iframe src="http://www.nadn.org/mycalendar-small.php?id=159744438&bg=FFFFFF&text=000000"></iframe>
               <div class="col s12">
                 <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- fee -->
+    <div id="fee" class="modal custom-modal">
+      <div class="modal-content">
+        <div class="row ">
+
+          <div class="col s12">
+            <h4 class="center-align">Fees</h4>
+          </div>
+
+          <div class="row">
+
+            <!-- fee -->
+            <div class="row">
+              <div class="col s12 m10 l10 offset-m1 offset-l1">
+
+                <p class="center-align"><b>Hourly Mediation/Arbitration/Special Master Rate: $500.00</b><br>
+                Unless the parties direct otherwise, we will send a statement representing one-half of the total to counsel for each of the parties at the conclusion of the hearing. Unfortunately, there have been occasions in the past when the parties have refused to pay the fee once the matter was resolved. We considered requiring payment in advance, but decided to simply ask the attorneys to be jointly responsible with their clients for our fee. Participation in the mediation will constitute your acceptance of that responsibility. </p>
+
+
+                <p class="center-align"><b>Cancellation Policy: </b><br>  In the event a matter is cancelled or rescheduled within 15 days before the scheduled date, a cancellation fee of $1,500.00 will be assessed for a half-day ($3,000.00 for a full-day) case unless other cases can be scheduled in those time slots. We will make every effort to reschedule. Any cancellation fee will be allocated equally between the parties, unless we are advised that the parties have a different agreement. We appreciate your understanding and cooperation concerning the necessity of a cancellation fee. </p>
+
               </div>
             </div>
 
