--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 
     </script>
 
-    <title>Skelly, Muchmore, & Oberbillig</title>
+    <title>Skelly, Muchmore & Oberbillig LLC - Mediation and Arbitration Services</title>
     <meta name="description" content="Skelly, Muchmore & Oberbillig Mediation Services, LLP is a partnership between Judge Christopher Skelly, Charles J. Muchmore, and Judge Robert H. Oberbillig. The firm offers mediation and arbitration services throughout Arizona." />
 
   </head>
