updated contact info windo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
         <h4 class="able">Members</h4>
       </div>
     </div>
-    
+
     <div class="row">
 
       <!-- partner 1  med and up-->
@@ -268,8 +268,14 @@
   <div id="email" class="modal custom-modal">
     <div class="modal-content">
       <div class="row">
-        <h4>Send us an email</h4>
-        <form class="col s12">
+        <h4>Contact Information</h4>
+        <p class="quicksand">(602) 277-8228</p>
+        <p><b>Scheduling:</b> dlegge@smoadr.com</p>
+        <p><b><%= partners[0].title %> <%= partners[0].first_name %> <%= partners[0].middle_initial %>. <%=partners[0].last_name %>:</b> <%= partners[0].email %></p>
+        <p><b><%= partners[1].title %> <%= partners[1].first_name %> <%= partners[1].middle_initial %>. <%=partners[1].last_name %>:</b> <%= partners[1].email %></p>
+        <p><b><%= partners[2].title %> <%= partners[2].first_name %> <%= partners[2].middle_initial %>. <%=partners[2].last_name %>:</b> <%= partners[2].email %></p>
+
+        <!-- <form class="col s12">
 
           <div class="row">
             <div class="col s12">
@@ -300,7 +306,7 @@
             </div>
           </div>
 
-        </form>
+        </form> -->
       </div>
     </div>
   </div>
