small styling changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -269,7 +269,7 @@
     <div class="modal-content">
       <div class="row">
         <h4>Contact Information</h4>
-        <p class="quicksand"><b>Phone: </b>(602) 277-8228</p>
+        <p><b>Phone: </b></p><p class="quicksand">(602) 277-8228</p>
         <p><b>Scheduling:</b> dlegge@smoadr.com</p>
         <p><b><%= partners[0].title %> <%= partners[0].first_name %> <%= partners[0].middle_initial %>. <%=partners[0].last_name %>:</b> <%= partners[0].email %></p>
         <p><b><%= partners[1].title %> <%= partners[1].first_name %> <%= partners[1].middle_initial %>. <%=partners[1].last_name %>:</b> <%= partners[1].email %></p>
