--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -81,7 +81,7 @@
           </div>
           <div class="col s10">
             <h5 class="serif nowrap"><%= partner.title %> <%= partner.first_name %> <%= partner.middle_initial %>. <%= partner.last_name %></h5>
-            <h6 class="serif"><b><a href="<%= partner.email %>"><%= partner.email %></a></b></h6>
+            <h6 class="serif"><b> <%= partner.email %> </b></h6>
             <h6 class="serif"><b>(602) 277-8228</b></h6>
           </div>
         </div>
