--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,7 +48,7 @@
     <nav class="hide-on-small-only">
       <div class="nav-wrapper blue hide-on-small-only">
       <ul id="nav-mobile" class=" hide-on-small-only quicksand ">
-        <li class="spacing center-align"><a href="/#members">Members</a></li>
+        <li class="spacing center-align"><a href="/">Home</a></li>
         <li class="spacing center-align"><a class="modal-trigger" href="#email">Contact Us</a></li>
         <li class="spacing center-align"><a class="modal-trigger nowrap" href="#scheduling">Scheduling</a></li>
         <li class="spacing center-align"><a href="/#location">Location</a></li>
