--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -107,34 +107,19 @@
     <!-- Modals -->
 
     <!-- contact -->
-    <div id="email" class="modal custom-modal">
+    <div id="email" class="modal">
       <div class="modal-content">
-        <div class="row">
-          <h4>Contact Information</h4>
-          <p><b>Phone: </b> (602) 277-8228</p>
-          <p><b>Scheduling:</b> dlegge@smoadr.com</p>
-          <p><b><%= partners[0].title %> <%= partners[0].first_name %> <%= partners[0].middle_initial %>. <%=partners[0].last_name %>:</b> <%= partners[0].email %></p>
-          <p><b><%= partners[1].title %> <%= partners[1].first_name %> <%= partners[1].middle_initial %>. <%=partners[1].last_name %>:</b> <%= partners[1].email %></p>
-          <p><b><%= partners[2].title %> <%= partners[2].first_name %> <%= partners[2].middle_initial %>. <%=partners[2].last_name %>:</b> <%= partners[2].email %></p>
 
-          <!-- <form class="col s12">
+        <div class="row">
+          <h4>Send us an email</h4>
+          <form class="col s12">
 
             <div class="row">
-              <div class="col s12">
-                <div class="input-field col s6">
-                  <select>
-                    <option value="" disabled selected>Recipient</option>
-                      <% for(let i =0; i < partners.length; i++){%>
-                          <option class="blue-text" value="<%= partners[i].email %>"><%= partners[i].first_name %> <%= partners[i].middle_initial %>. <%=partners[i].last_name %></option>
-                      <%}%>
-                    <option class="blue-text" value="dlegge@ssmadr.com">Scheduling</option>
-                  </select>
-                </div>
-                <div class="input-field col s6">
-                  <input id="email" type="email" placeholder="Your Email Address" class="border">
-                </div>
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="first_name">Your Email Address</label>
               </div>
-              </div>
+            </div>
 
             <div class="row">
               <div class="input-field col s12">
@@ -148,11 +133,10 @@
               </div>
             </div>
 
-          </form> -->
+          </form>
         </div>
       </div>
     </div>
-
 
     <!--schedule -->
     <div id="scheduling" class="modal custom-modal">
@@ -165,9 +149,17 @@
 
           <div class="row">
 
-            <div class="col s12  l4 center-align ">
-              <p class="center-align" >Christopher Skelly</p>
+            <div class="col s12 l4 center-align">
+              <p class="center-align">Steve Scott</p>
               <iframe src="http://www.nadn.org/mycalendar-small.php?id=577414834&bg=FFFFFF&text=000000"></iframe>
+              <div class="col s12">
+                <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
+              </div>
+            </div>
+
+            <div class="col s12  l4 center-align ">
+              <p class="center-align" >Chris Skelly</p>
+              <iframe src="http://www.nadn.org/mycalendar-small.php?id=121869450&bg=FFFFFF&text=000000"></iframe>
               <div class="col s12">
                 <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
               </div>
@@ -176,14 +168,6 @@
             <div class="col s12 l4 center-align ">
               <p class="center-align" >Charles Muchmore</p>
               <iframe src="http://www.nadn.org/mycalendar-small.php?id=159744438&bg=FFFFFF&text=000000"></iframe>
-              <div class="col s12">
-                <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
-              </div>
-            </div>
-
-            <div class="col s12 l4 center-align">
-              <p class="center-align">Robert Oberbillig</p>
-              <iframe src="http://www.nadn.org/mycalendar-small.php?id=605446516&bg=FFFFFF&text=000000"></iframe>
               <div class="col s12">
                 <img src="http://www.nadn.org/images/Cal-NADNKey.gif" border="0" width="231" height="62">
               </div>
